# frappe-stack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  PLAN.md  PRD.md  README.md  SECURITY.md  mkdocs.yml  requirements-docs.txt
.claude-plugin/: README.md  marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: analyst.md  deployer.md  documenter.md  engineer.md  migrator.md  orchestrator.md  reviewer.md  tester.md
apps/stack_core/: README.md  pyproject.toml
apps/stack_core/stack_core/: hooks.py  modules.txt
apps/stack_core/stack_core/api/: _decorators.py  config_builder.py  diff.py  doctype_builder.py  fixtures.py  workflow_builder.py
apps/stack_core/stack_core/doctype/experiment_assignment/: experiment_assignment.json  experiment_assignment.py  test_experiment_assignment.py
apps/stack_core/stack_core/doctype/stack_audit_log/: stack_audit_log.json  stack_audit_log.py  test_stack_audit_log.py
apps/stack_core/stack_core/doctype/stack_blueprint/: stack_blueprint.json  stack_blueprint.py  test_stack_blueprint.py
apps/stack_core/stack_core/doctype/stack_workflow_def/: stack_workflow_def.json  stack_workflow_def.py  test_stack_workflow_def.py
apps/stack_core/stack_core/git_bridge/: __init__.py  applier.py  committer.py  differ.py  exporter.py  pr_opener.py
apps/stack_core/stack_core/guardrails/: fieldtype_whitelist.py  permission_enforcer.py  reserved_names.py  schema_validator.py  workflow_validator.py
apps/stack_core/stack_core/tests/: test_api_doctype_builder.py  test_git_bridge.py  test_guardrails.py
(+59 files in other folders)
